# fbrbsp

./: .bumpversion.cfg  .gitignore  README.md  requirements.txt  setup.cfg
data/: FU3_RBSPA_conjunctions_dL10_dMLT10_final.csv  FU3_RBSPA_conjunctions_dL10_dMLT10_final_hr.csv  FU3_RBSPA_conjunctions_dL5_dMLT5_final_hr.csv  FU3_RBSPB_conjunctions_dL10_dMLT10_final.csv  FU3_RBSPB_conjunctions_dL10_dMLT10_final_hr.csv  FU3_RBSPB_conjunctions_dL5_dMLT5_final_hr.csv  FU3_microburst_catalog_05.csv  FU4_RBSPA_conjunctions_dL10_dMLT10_final.csv  FU4_RBSPA_conjunctions_dL10_dMLT10_final_hr.csv  FU4_RBSPA_conjunctions_dL5_dMLT5_final_hr.csv  FU4_RBSPB_conjunctions_dL10_dMLT10_final.csv  FU4_RBSPB_conjunctions_dL10_dMLT10_final_hr.csv  FU4_RBSPB_conjunctions_dL5_dMLT5_final_hr.csv  FU4_microburst_catalog_05.csv  RBSPa_FU3_conjunction_values_hr.csv  RBSPa_FU4_conjunction_values_hr.csv  RBSPb_FU3_conjunction_values_hr.csv  RBSPb_FU4_conjunction_values_hr.csv  c_rp_FU3_RBSPA.csv  c_rp_FU3_RBSPB.csv  c_rp_FU4_RBSPA.csv  c_rp_FU4_RBSPB.csv  repetitionTime in 20170721.eps
fbrbsp/: __init__.py  __main__.py  conjunction_burst_avaliability.py  conjunction_dist.py  conjunction_summary_plot.py  dial.py  dmlt.py  microburst_chorus_repetition.py  microburst_duration.py  summary_plot.py
fbrbsp/firebird/: load.py
presentations/: 20230124_firebird_microburst_durations.pptx  20230130_firebird_microburst_durations.pptx  20230202_firebird_microburst_dispersion.pptx  20230209_firebird_microburst_dispersion.pptx  20230306_dispersion_fit_uncertanity.pptx  20230405_chorus_microburst_repetition.pptx
(+18 files in other folders)
