[metadata]
name = fbrbsp
version = 0.0.1
description = 'Analyze conjunctions between FIREBIRD-II and RBSP missions'
long_description = file: README.md 
url='https://https://github.com/mshumko/fbrbsp'
author='M. Shumko'
author_email='msshumko@gmail.com'
long_description_content_type = text/markdown
keywords = RBSP, FIREBIRD, Conjunction, Precipitation, Van Allen Belts
python_requires='>=3.7'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    matplotlib
    numpy
    pandas
    sampex  # For its downloader.
    bump2version==1.0.1
    cdflib